--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "skin-tool",
   "version": "1.0.0",
   "description": "An api that utilizes skin-tool-cv to obtain custom skins based on masks, and uploads them to the mojang api (using mineskin). It also stores all the skins collections onto a cache for long term storage to reduce latency.",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -18,5 +18,12 @@
   "bugs": {
     "url": "https://github.com/InfinityZ25/skin-tool-js/issues"
   },
-  "homepage": "https://github.com/InfinityZ25/skin-tool-js#readme"
+  "homepage": "https://github.com/InfinityZ25/skin-tool-js#readme",
+  "dependencies": {
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.14"
+  }
 }
